# gtest_sample

./: CMakeLists.txt  README.md
include/: simple_add.h
src/: CMakeLists.txt  simple_add.cpp  simple_add_main.cpp
test/: CMakeLists.txt  main.cpp  simple_add_test.cpp
