FILE(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
SET(SOURCES ${SOURCES})

SET(TARGET ${SRCTARGET}_Bin)
ADD_EXECUTABLE(${TARGET} ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${TARGET} PUBLIC ${BASE_INC_DIR})

SET(TARGET ${SRCTARGET}_Lib)
ADD_LIBRARY(${TARGET} STATIC ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${TARGET} PUBLIC ${BASE_INC_DIR})


