INCLUDE(GoogleTest)

FILE(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp)
SET(SOURCES ${SOURCES})

SET(TARGET ${TESTTARGET})
ADD_EXECUTABLE(${TARGET} ${SOURCES})
ADD_TEST(NAME ${TARGET} COMMAND ${TARGET})
TARGET_INCLUDE_DIRECTORIES(${TARGET} PUBLIC ${BASE_INC_DIR})
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE ${SRCTARGET}_Lib gtest)
